# body-feature-extaction

./: CMakeLists.txt  CNAME  NEWS.md  README.md
src/: armpoint.cc  armpoint.cpp  armpoint.h  bodyposition.cpp  bodyposition.h  converttobinary.cc  converttobinary.cpp  converttobinary.h  front_height.cpp  front_height.h  hand.cc  hand.cpp  hand.h  main.cc  main.h  middlepoint.cc  middlepoint.cpp  middlepoint.h  point_gradient.cc  point_gradient.h  shoulderwidth.cc  shoulderwidth.h  side_height.cc  side_height.h  waist.cpp  waist.h
src/main/: main.cc  main.cpp
